--- a/bonus.html
+++ b/bonus.html
@@ -43,26 +43,15 @@
             </div>
         
     </nav>
-    <!-- PARTIE HERO-->
-    <section class="row spid-cont align-items-center">
-                <div class="col container descrip p-5"> <!--REGLAGE RESPONSIVE CONTENU-->
-                    <h1>SPIDERMAN</h1> <!-- LES TITRES -->
-                    <div class="boutons text-start">
-                        <a class="btn btn-1" href="hero.html"><p class="mb-0">Voir les Héros</p></a>
-                        <a class="btn btn-2 mx-md-2 mx-md-3" href="adversaires.html"><p class="mb-0">Voir les Advesaires</p></a>
-                    </div>
-                    <h2>L'araignée sympa du quartier !</h2> <!-- LES TITRES -->
+    <!-- PARTIE HEROS-->
+    <section class="row heros-cont align-items-center">
+                <div class="col container align-items-start text-start"> <!--REGLAGE CONTENU-->
+                    <h1>UN HEROS</h1> <!-- VERSION DESKTOP FONT H2 -->
+                    <h2 class="h2-desktop">Coming soon...</h2> <!-- VERSION MOBILE FONT H2 -->
+                    <h2 class="h2-mobile">Un grand pouvoir implique de grandes responsabilités</h2> <!-- LES TITRES -->
                 </div>
     </section>
-
-
-
-
-
-
-
-
-        <!-- FOOTER -->
+    <!-- FOOTER -->
         <footer class="row">
             <!-- BOUTONS DE NAVIGATION : version desktop-->
             <div class="row footer-1desktop justify-content-around px-2">
