nav&footer adversaire

--- a/heros.html
+++ b/heros.html
@@ -67,11 +67,11 @@
                 <a class="col-3 button btn p-0 text-start" href="#">Blog</a>
                 <input class="col-3 form-select form-select2 pt-0 pb-0" placeholder="Langue" style="width: 40%; border: none; margin-left: -8%; padding-left: 14px;">                
             </div>
-            <div class="row container footer-2desktop">
-                <img class="rounded-circle-heros" src="Assets/Logo/logof.png" alt="Logo Facebook" style="margin-top: 5%;">
-                <img class="rounded-circle-heros" src="Assets/Logo/logoi.png" alt="Logo Instagram"style="margin-top: 5%;">
-                <img class="rounded-circle-heros" src="Assets/Logo/logoy.png" alt="Logo Youtube" style="margin-top: 5%;">
-                <img class="rounded-circle-heros" src="Assets/Logo/logot.png" alt="Logo Twitter" style="margin-top: 5%;">
+            <div class="row container footer-2desktop-heros">
+                <img class="rounded-circle" src="Assets/Logo/logof.png" alt="Logo Facebook" style="margin-top: 5%;">
+                <img class="rounded-circle" src="Assets/Logo/logoi.png" alt="Logo Instagram"style="margin-top: 5%;">
+                <img class="rounded-circle" src="Assets/Logo/logoy.png" alt="Logo Youtube" style="margin-top: 5%;">
+                <img class="rounded-circle" src="Assets/Logo/logot.png" alt="Logo Twitter" style="margin-top: 5%;">
             </div>
         </div>
         <!-- BOUTONS DE NAVIGATION : version mobile-->
