début heros html

--- a/heros.html
+++ b/heros.html
@@ -43,7 +43,40 @@
             </div>
         
     </nav>
+<!-- BANNIERE -->
+    <section class="row spid-cont-heros align-items-center">
+        <div class="col container descrip p-5"> <!--REGLAGE RESPONSIVE CONTENU-->
+            <h1>UN HEROS</h1> <!-- LES TITRES -->
+            <h2>"Un grand pouvoir implique de grandes responsabilités"</h2> <!-- LES TITRES -->
+        </div>
+        <div class="col container descrip2 p-5"> <!--REGLAGE RESPONSIVE CONTENU-->
+            <h1>UN HEROS</h1>
+            <h2>"Un grand pouvoir implique de grandes responsabilités"</h2>
+            <!-- LES BOUTONS  -->
+        </div>
+    </section>
+<!-- VALEURS A DEFENDRE -->
+<section class="row spid-val-heros align-items-center">
+    <div class="col-6 p-5"> <!--REGLAGE RESPONSIVE CONTENU-->
+        <h1>DES VALEURS A DEFENDRE</h1> <!-- LES TITRES -->
+        <h2 class="p-2">Spiderman, un héros qui se dépasse</h2> <!-- LES TITRES -->
+        <p>Peter Parker est un orphelin. Ses parents ont été tués. Peter est élevé par sa tante et son oncle : May et Benjamin Parker. C'est un élève intéressé par les sciences.</p>
+        <br><p>Un, jour, il assiste à une expérience et il se fait mordre par une araignée génétiquement modifiée. Il acquiert alors des super-pouvoir. Il devient fort, agile, souple, et peur lancer des toiles d'araignée. Il utilise cette force pour gagner facilement de l'argent. Un jour, il voit quelqu'un voler de l'argent mais ne tente pas de l'arrêter. Peu de temps après, son oncle est assassiné. La colère conduit Peter à poursuivre l'assasin découvant que c'était le voleur qu'il avait laissé s'échapper.</p>
+        <p style="padding-top: 20px">C'est à partir de cet évènement qu'il décida de lutter contre le crime, se rappelant des paroles de son oncle Ben :</p>
+        <h2 class="p-2">"Un grand pouvoir implique de grandes responsabilités"</h2>
+        <p>Il devient alors le justicier Spiderman, arpentant les rues de New-York à la recherche de criminels et de citoyens en danger.</p>
+        <p>Pour gragner de l'argent, il vend des photos de Spiderman à des journalistes. Il est engagé dans le Daily Bugle.</p>
+        <p>Malgré toutes ses péripéties il reste proche des habitants, fidèle à ses valeurs et à sa vision de la justice.</p>
+    </div>
+    <div class="col-6 p-5">
+        <video controls poster="Assets/Illustration/enveloppe.jpg">
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/masukri2JiQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </video>
+        
 
+    </div>
+
+</section>
 
 
 
