--- a/heros.html
+++ b/heros.html
@@ -43,7 +43,7 @@
             </div>
         
     </nav>
-<!-- BANNIERE -->
+<!-- BANNIERE 1 -->
     <section class="row spid-cont-heros align-items-center">
         <div class="col container descrip p-5"> <!--REGLAGE RESPONSIVE CONTENU-->
             <h1>UN HEROS</h1> <!-- LES TITRES -->
@@ -57,7 +57,7 @@
     </section>
 <!-- VALEURS A DEFENDRE -->
 <section class="row spid-val-heros align-items-center p-5">
-    <div class="col-6 textes-cont-heros px-4"> <!--REGLAGE RESPONSIVE CONTENU-->
+    <div class="col-6 textes-cont-heros"> <!--REGLAGE RESPONSIVE CONTENU-->
         <h1>DES VALEURS &Agrave DEFENDRE</h1> <!-- LES TITRES -->
         <h2>Spiderman, un héros qui se dépasse</h2> <!-- LES TITRES -->
         <p style="padding-top: 10px;">Peter Parker est un orphelin. Ses parents ont été tués. Peter est élevé par sa tante et son oncle : May et Benjamin Parker. C'est un élève intéressé par les sciences.</p>
@@ -68,14 +68,41 @@
         Pour gragner de l'argent, il vend des photos de Spiderman à des journalistes. Il est engagé dans le Daily Bugle.
         Malgré toutes ses péripéties il reste proche des habitants, fidèle à ses valeurs et à sa vision de la justice.</p>
     </div>
-    <div class="col-6 video-cont-heros text-center" style="padding-top: 6%">
-        <video controls poster="Assets/Illustration/enveloppe.jpg">
-            <iframe src="https://www.youtube.com/embed/masukri2JiQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </video>
-        
-
+    <div class="col-6 video-cont-heros">
+        <iframe src="https://www.youtube.com/embed/masukri2JiQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-
+</section>
+<!-- BANNIERE 2 -->
+<section class="row spid-cont-heros2 align-items-center">
+    <div class="col container descrip p-5"> <!--REGLAGE RESPONSIVE CONTENU-->
+        <h1>DES FONDATIONS SOLIDES</h1> <!-- LES TITRES -->
+        <h2>De quoi est-il vraiment capable ?</h2> <!-- LES TITRES -->
+    </div>
+    <div class="col container descrip2 p-5"> <!--REGLAGE RESPONSIVE CONTENU-->
+        <h1>DES FONDATIONS SOLIDES</h1>
+        <h2>De quoi est-il vraiment capable ?</h2>
+    </div>
+</section>
+<!-- CONTENU TEXTE -->
+<section class="row spid-cont-text-heros2 align-items-center px-5">
+    <div class="col container pt-5"> <!--REGLAGE RESPONSIVE CONTENU-->
+        <p class="mb-0"><strong>Force surhumaine : </strong>Possédant une force proportionnelle à celle d'une araignée, Spider-Man est capable de soulever plusieurs tonnes ou même soulever des voitures se déplacent à 40km/h.</p>
+        <p class="mb-0"><strong>Durabilité surhumaine : </strong>Spider-Man possède des os et des fibres musculaires plus denses lui permettant de suivre à de grands impacts, et est notamment pas affecté par une chute de plusieurs étages ou moins affecté par des coups violents.</p>
+        <p class="mb-0"><strong>Vitesse surhumaine : </strong>Spider-Man peut se déplacer à des vitesses plus qu'ordinaire pour un humain, faisant de lui un expert de l'esquive.</p>
+        <p class="mb-0"><strong>Agilité surhumaine : </strong>Spider-Man est exceptionnellement agile et rapide, capable de se balancer partout avec sa toile d'araignée et de sauter de grandes distances sans difficulté.</p>
+        <br>
+        <p class="mb-0"><strong>Réflexes surhumains : </strong>Spider-Man possède des réflexes surdéveloppés lui permettant d'attraper des objets se déplacent à grande vitesse sans même regarder ce qu'il fait.</p>
+        <p class="mb-0"><strong>Sens surhumains : </strong>Les sens de Spider-Man sont grandement améliorés et il les décrit comme s'il &laquo; tournait le bouton volume à fond &raquo;.</p>
+        <p class="mb-0"><strong>Equilibre surhumain : </strong>Le sens d'équilibre de Spider-Man est surhumain, lui conférant un equilibirium, une coordination, une dextérité et une agilité inhumaine pour accomplir des actes acrobatiques incroyables.</p>
+        <p class="mb-0"><strong>Vue surhumaine : </strong>Les vision de Spider-Man est extrêmement développée, si bien qu'il a besoin de lunettes spéciales pour éviter d'être handicapé dans un combat.</p>
+    </div>
+    <div class="col container pt-0"> <!--REGLAGE RESPONSIVE CONTENU-->
+        <p class="mb-0"><strong>Sens d'araignée : </strong>Le trait le plus important de Spider-Man est son instinct de survie paranomal, qui l'avertit des instants dangereux à venir avant qu'ils n'arrivent. Le cerveau de Spider-Man absorbe et réagit aux évènement de façon accélérée, l'alertant du danger autour de lui, ce qui lui sert de sixième sens. Ceci ne fonctionne qu'au niveau de son subconscient, ce qui l'alerte de dangers presque impossibles à remarquer du premier coups, cela lui permet d'esquiver chaque coups et de contrer les attaques dans ses combats.</p>
+        <p class="mb-0"><strong>Grimper aux murs : </strong> Spider-Man est capable d'adhérer aux murs, aux plafonds et à d'autres surfaces comme une araignée, déclarant même qu'il n'a pas besoin de mécanismes pour cela.</p>
+        <br>
+        <p class="mb-0"><strong>Grande intelligence : </strong>Peter Parker est une personne exceptionnement intelligente dans le domaine des sciences, capable d'inventer et de construire son propre lance-toiles (dont la conception même impressionne Tony Stark) et d'utiliser les lois de la physique à son avantage en plein milieu d'un combat en tant que Spider-Man. Il peut également inventer des blagues pleines d'esprits, mais ennuyantes, pour irriter ses adversaires.</p>
+        <p class="mb-0"><strong>Culture générale : </strong>Peter Parker possède une très grande culture générale, particulièrement au niveau du cinéma. Cela l'aide notamment dans ses missions, et pour élaborer des plans.</p>
+    </div>
 </section>
 
 
