--- a/home.html
+++ b/home.html
@@ -196,6 +196,7 @@
         <div class="row container footer-3 p-0">
             <p>&copy;SAYNAXMARVEL, Inc.2022. We love our users!</p>
             <audio controls autoplay>
+                <source src="Assets/audio1.ogg" type="audio/ogg">
                 <source src="Assets/audio1.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
             </audio>
