--- a/heros.html
+++ b/heros.html
@@ -107,8 +107,8 @@
 
 <!-- CONTENU JAMAIS SEUL : VERSION WEB -->
 <section class="row spid-cont-jamais-seul-heros2 align-items-center px-5">
-    <h1>JAMAIS SEUL</h1>
-    <h2>Son entourage proche</h2>
+    <h1 style="padding-left: 36px;">JAMAIS SEUL</h1>
+    <h2 style="padding-left: 36px;">Son entourage proche</h2>
     <div class="col container pt-0"> <!--REGLAGE RESPONSIVE CONTENU-->
         <img id="image1"src="Assets/Illustration/img21.png" alt="image de deux garçons">
         <img id="image2"src="Assets/Illustration/img22.png" alt="image de deux garçons">
@@ -119,29 +119,44 @@
         <p class="mb-0">Ned Leeds est également le meilleur amis de Peter au lycée dans les films Marvel. Lorsqu'il découvre son identité secrète il s'appliquera à l'épauler dans ses opérations de justiciers. Il aime s'appeler "le gars dans le fauteil" de Spider-Man et le meilleur ami numéro 1 de Peter. Dans le film No Way Home, après avoir interrogé les versions alternatives de Peter il apprend que Harry avait essayé de tuer son meilleur ami et va rassurer Peter dans une scène, plutôt comique.</p>
     </div>
 </section>
+
 <!-- CONTENU JAMAIS SEUL : VERSION MOBILE -->
 <section class="row spid-cont-jamais-seul-heros2M align-items-center px-5">
     <h1>JAMAIS SEUL</h1>
     <h2>Son entourage proche</h2>
     <h1 class="text-start pt-5">DES MEILLEURS AMIS</h1>
-    <div class="col container text-center pt-0"> <!--REGLAGE RESPONSIVE CONTENU-->
+    <div class="col container text-center pt-0 pb-0"> 
         <img id="image1"src="Assets/Illustration/img21.png" alt="image de deux garçons">
         <img id="image2"src="Assets/Illustration/img22.png" alt="image de d'un garçon">
     </div>
-    <div class="col container pt-3"> <!--REGLAGE RESPONSIVE CONTENU-->
+    <div class="col container pt-3"> 
         <p class="mb-0 pt-4">Harry Osborn est le meilleur ami de Peter Parker. Il s'agira pourtant d'une amitié à double tranchant, Harry voulant venger la mort de son père, le Bouffon Vert en tuant Spider-Man. Pour cela il s'en prendra à Mary Jane et s'alliera au Dr Octopus. Lorsque finalement il découvrivra la réelle identité de Spider-Man, il sera choqué de découvrir que son pire ennemi est en réalité son meilleur ami. Il finira par s'allier avec Peter afin de sauver MJ et mourra dans ses bras.</p>
         <p class="mb-0 pt-4 pb-5">Ned Leeds est également le meilleur amis de Peter au lycée dans les films Marvel. Lorsqu'il découvre son identité secrète il s'appliquera à l'épauler dans ses opérations de justiciers. Il aime s'appeler "le gars dans le fauteil" de Spider-Man et le meilleur ami numéro 1 de Peter. Dans le film No Way Home, après avoir interrogé les versions alternatives de Peter il apprend que Harry avait essayé de tuer son meilleur ami et va rassurer Peter dans une scène, plutôt comique.</p>
+    </div>
+</section>
+<!-- CONTENU MJ/GWEN STACY : VERSION WEB -->
+<section class="row spid-cont-jamais-seul-heros2 align-items-center px-5">
+    <div class="col container pt-0"> 
+        <h1 style="padding-bottom: 10px;">MJ/GWEN STACY</h1>
+        <p class="mb-0 pt-0 pb-0">MJ et Gwen Stacy, sont les love interest de Peter Parker. Mary Jane est la fille populaire du lycée et sortira d'abord avec avec Harry Osborn mais elle sera le principal amour de Peter et deviendra sa femme. Dans le films de Marveil, Michelle Jones est une adolescente cynique et très intelligente. Elle s'ouvrira peu à peu avec Ned Leeds et Peter et tombera amoureuse de lui. Leur relation sera mise à mal par la révélation de l'identité de Parker au monde entier dans No Way Home.</p>
+        <p class="mb-0 pt-0 pb-3">Gwen Stacy est également un grand amour de Peter. Jugée moins superficielle que Mary Jane elle partage la passion des sciences avec Peter et leur relation sera mise à l'épreuve par ses absences répétées. Lorsque son père meurt alors qu'il découvre l'identité de Spider Man, il demandera à Peter de garder sa fille loin du danger et donc de lui ce qui engendrera une grande culpabilité chez notre héros. Gwen finira par mourir de la main de Bouffon Vert (ou d'Electro dans the Amazing Spider Man 2) et Peter retournera vers MJ.</p>
+        <p class="mb-0 pb-5">Avec ses relations Spider Man apprendra à concilier sa vie affective et son activité de justicier masqué ainsque que le sens du mot sacrifice.</p>
+    </div>
+    <div class="col container text-center pt-0" style="padding-right: 24px;"> 
+        <img id="image3"src="Assets/Illustration/img23.png" alt="image d'une fille">
+        <img id="image4"src="Assets/Illustration/img25.png" alt="image d'une fille">
+        <img id="image5"src="Assets/Illustration/img24.png" alt="image d'une fille'">
     </div>
 </section>
 <!-- CONTENU MJ/GWEN STACY : VERSION MOBILE -->
 <section class="row spid-cont-jamais-seul-heros2M align-items-center px-5">
     <h1 class="text-start">MJ/GWEN STACY </h1>
-    <div class="col container text-center p-0 pt-2"> <!--REGLAGE RESPONSIVE CONTENU-->
+    <div class="col container text-center p-0 pt-2"> 
         <img id="image3"src="Assets/Illustration/img23.png" alt="image d'une fille">
         <img id="image4"src="Assets/Illustration/img25.png" alt="image d'une fille">
-        <img id="image5"src="Assets/Illustration/img24.png" alt="image d'une fille'">
+        <img id="image5"src="Assets/Illustration/img24.png" alt="image d'une fille">
     </div>
-    <div class="col container pt-3"> <!--REGLAGE RESPONSIVE CONTENU-->
+    <div class="col container pt-3">
         <p class="mb-0 pt-2 pb-0">MJ et Gwen Stacy, sont les love interest de Peter Parker. Mary Jane est la fille populaire du lycée et sortira d'abord avec avec Harry Osborn mais elle sera le principal amour de Peter et deviendra sa femme. Dans le films de Marveil, Michelle Jones est une adolescente cynique et très intelligente. Elle s'ouvrira peu à peu avec Ned Leeds et Peter et tombera amoureuse de lui. Leur relation sera mise à mal par la révélation de l'identité de Parker au monde entier dans No Way Home.</p>
         <p class="mb-0 pt-0 pb-3">Gwen Stacy est également un grand amour de Peter. Jugée moins superficielle que Mary Jane elle partage la passion des sciences avec Peter et leur relation sera mise à l'épreuve par ses absences répétées. Lorsque son père meurt alors qu'il découvre l'identité de Spider Man, il demandera à Peter de garder sa fille loin du danger et donc de lui ce qui engendrera une grande culpabilité chez notre héros. Gwen finira par mourir de la main de Bouffon Vert (ou d'Electro dans the Amazing Spider Man 2) et Peter retournera vers MJ.</p>
         <p class="mb-0 pb-5">Avec ses relations Spider Man apprendra à concilier sa vie affective et son activité de justicier masqué ainsque que le sens du mot sacrifice.</p>
