les avengers heros

--- a/heros.html
+++ b/heros.html
@@ -152,14 +152,43 @@
 <section class="row spid-cont-jamais-seul-heros2M align-items-center px-5">
     <h1 class="text-start">MJ/GWEN STACY </h1>
     <div class="col container text-center p-0 pt-2"> 
-        <img id="image3"src="Assets/Illustration/img23.png" alt="image d'une fille">
-        <img id="image4"src="Assets/Illustration/img25.png" alt="image d'une fille">
-        <img id="image5"src="Assets/Illustration/img24.png" alt="image d'une fille">
+        <img id="image3"src="Assets/Illustration/img23.png" alt="photo d'une fille">
+        <img id="image4"src="Assets/Illustration/img25.png" alt="photo d'une fille">
+        <img id="image5"src="Assets/Illustration/img24.png" alt="photo d'une fille">
     </div>
     <div class="col container pt-3">
         <p class="mb-0 pt-2 pb-0">MJ et Gwen Stacy, sont les love interest de Peter Parker. Mary Jane est la fille populaire du lycée et sortira d'abord avec avec Harry Osborn mais elle sera le principal amour de Peter et deviendra sa femme. Dans le films de Marveil, Michelle Jones est une adolescente cynique et très intelligente. Elle s'ouvrira peu à peu avec Ned Leeds et Peter et tombera amoureuse de lui. Leur relation sera mise à mal par la révélation de l'identité de Parker au monde entier dans No Way Home.</p>
         <p class="mb-0 pt-0 pb-3">Gwen Stacy est également un grand amour de Peter. Jugée moins superficielle que Mary Jane elle partage la passion des sciences avec Peter et leur relation sera mise à l'épreuve par ses absences répétées. Lorsque son père meurt alors qu'il découvre l'identité de Spider Man, il demandera à Peter de garder sa fille loin du danger et donc de lui ce qui engendrera une grande culpabilité chez notre héros. Gwen finira par mourir de la main de Bouffon Vert (ou d'Electro dans the Amazing Spider Man 2) et Peter retournera vers MJ.</p>
         <p class="mb-0 pb-5">Avec ses relations Spider Man apprendra à concilier sa vie affective et son activité de justicier masqué ainsque que le sens du mot sacrifice.</p>
+    </div>
+</section>
+<!-- CONTENU lES AVENGERS : VERSION WEB -->
+<section class="row spid-cont-avengers m-p-1">
+    <div class="col-6 p-5"> 
+        <div class="row">
+            <h1 style="padding-bottom: 10px;">LES AVENGERS</h1>
+            <div class="col-6 partD-haut">
+                <img id="image26"src="Assets/Illustration/img26.png" alt="image">
+                <img id="image27"src="Assets/Illustration/img27.png" alt="image">
+            </div>
+            <div class="col-6">
+                <p class="mb-0 pt-0 pb-0">Avec Capitain America : Civil War, Tony Stark a fait de Spiderman un membre honoraire des Avengers. Un statut qui lui a ensuite été octroyé définitivement dans Avengers : Infinity War et la menace Thanos. Mais durant ce laps de temps, Peter Parker s'est focalisé sur sa communauté en devenant "la petite araignée de quartier". Deux années d'expérience supplémentaires qui ont permis au jeune homme d'acquérir la maturité nécessaire pour devenir celui que les Avengers attendaient.</p>
+                <p>Toutefois Spiderman combat des menaces principalement sur Terre car c'est son terrain de prédilection. Un nouveau groupe risque de voir le jour avec Dardevil, Luke Cage, Jessica Jones et Iron Fist : Les Defenders. On verra où tout cela nous mène !</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6 partD-bas text-center">
+                <img id="image28"src="Assets/Illustration/img28.png" alt="image">
+                <img id="image29"src="Assets/Illustration/img29.png" alt="image">
+            </div>
+            <div class="col-6 text-end">
+                <img id="image30"src="Assets/Illustration/img30.png" alt="image">
+                <img id="image31"src="Assets/Illustration/img31.png" alt="image">
+            </div>
+        </div>
+    </div>
+    <div class="col-6 partG" style="padding: 0px;"> 
+        <!-- <img id="image32"src="Assets/Illustration/img32.png" alt="image d'une fille"> -->
     </div>
 </section>
 
