--- a/home.html
+++ b/home.html
@@ -125,7 +125,7 @@
     <!-- CONTENU -->
     <section class="row spiderman-inscript align-items-center py-5">
         <div class="inscrip-cont">
-            <h2>INSCRIS-TOI A LA NEWSLETTER !</h2> <!-- TITRE -->
+            <h2>INSCRIS-TOI &Agrave; LA NEWSLETTER !</h2> <!-- TITRE -->
             <p>L'univers de l'araignée justicière te passionne ? Reste au courant des dernières actualités grâce à notre newsletter !</p> <!-- PARAGRAPHE -->
             <div class="les-input"> <!-- LES INPUTS -->
                 <input type="text" class="form-control form-control-sm px-3" placeholder="Nom Prénom">
@@ -142,7 +142,7 @@
     <!-- FOOTER -->
     <footer class="row">
         <!-- BOUTONS DE NAVIGATION : version desktop-->
-        <div class="row footer-1desktop justify-content-around px-2">
+        <div class="row footer-1desktop justify-content-around px-2 pt-5">
             <div class="row col-4 part-1desktop text-end m-0 p-0">
                 <a class="col-3 button btn px-0 text-end" href="#">Mobile app</a>
                 <a class="col-6 button btn px-0 text-end" href="#">Politique de confidentialité</a>
