--- a/adversaires.html
+++ b/adversaires.html
@@ -51,7 +51,7 @@
     <!-- FOOTER -->
     <footer class="row footer-adversaires">
         <!-- BOUTONS DE NAVIGATION : version desktop-->
-        <div class="row footer-1desktop-adversaires justify-content-around px-2">
+        <div class="row footer-1desktop-adversaires justify-content-around px-2 pt-5">
             <div class="row col-4 part-1desktop-adversaires text-end m-0 p-0">
                 <a class="col-3 button btn px-0 text-end" href="#">Mobile app</a>
                 <a class="col-6 button btn px-0 text-end" href="#">Politique de confidentialité</a>
