--- a/heros.html
+++ b/heros.html
@@ -52,7 +52,6 @@
         <div class="col container descrip2 p-5"> <!--REGLAGE RESPONSIVE CONTENU-->
             <h1>UN HEROS</h1>
             <h2>"Un grand pouvoir implique de grandes responsabilités"</h2>
-            <!-- LES BOUTONS  -->
         </div>
     </section>
 <!-- VALEURS A DEFENDRE -->
@@ -107,8 +106,8 @@
 
 <!-- CONTENU JAMAIS SEUL : VERSION WEB -->
 <section class="row spid-cont-jamais-seul-heros2 align-items-center px-5">
-    <h1 style="padding-left: 36px;">JAMAIS SEUL</h1>
-    <h2 style="padding-left: 36px;">Son entourage proche</h2>
+    <h1 style="padding-left: 36px; margin-bottom: 0.6%;">JAMAIS SEUL</h1>
+    <h2 style="padding-left: 36px; margin-bottom: 2.5%;">Son entourage proche</h2>
     <div class="col container pt-0"> <!--REGLAGE RESPONSIVE CONTENU-->
         <img id="image1"src="Assets/Illustration/img21.png" alt="image de deux garçons">
         <img id="image2"src="Assets/Illustration/img22.png" alt="image de deux garçons">
@@ -137,7 +136,7 @@
 <!-- CONTENU MJ/GWEN STACY : VERSION WEB -->
 <section class="row spid-cont-jamais-seul-heros2 align-items-center px-5">
     <div class="col container pt-0"> 
-        <h1 style="padding-bottom: 10px;">MJ/GWEN STACY</h1>
+        <h1 style="padding-bottom: 20px;">MJ/GWEN STACY</h1>
         <p class="mb-0 pt-0 pb-0">MJ et Gwen Stacy, sont les love interest de Peter Parker. Mary Jane est la fille populaire du lycée et sortira d'abord avec avec Harry Osborn mais elle sera le principal amour de Peter et deviendra sa femme. Dans le films de Marveil, Michelle Jones est une adolescente cynique et très intelligente. Elle s'ouvrira peu à peu avec Ned Leeds et Peter et tombera amoureuse de lui. Leur relation sera mise à mal par la révélation de l'identité de Parker au monde entier dans No Way Home.</p>
         <p class="mb-0 pt-0 pb-3">Gwen Stacy est également un grand amour de Peter. Jugée moins superficielle que Mary Jane elle partage la passion des sciences avec Peter et leur relation sera mise à l'épreuve par ses absences répétées. Lorsque son père meurt alors qu'il découvre l'identité de Spider Man, il demandera à Peter de garder sa fille loin du danger et donc de lui ce qui engendrera une grande culpabilité chez notre héros. Gwen finira par mourir de la main de Bouffon Vert (ou d'Electro dans the Amazing Spider Man 2) et Peter retournera vers MJ.</p>
         <p class="mb-0 pb-5">Avec ses relations Spider Man apprendra à concilier sa vie affective et son activité de justicier masqué ainsque que le sens du mot sacrifice.</p>
@@ -187,15 +186,23 @@
             </div>
         </div>
     </div>
-    <div class="col-6 partG" style="padding: 0px;"> 
-        <!-- <img id="image32"src="Assets/Illustration/img32.png" alt="image d'une fille"> -->
+    <div class="col-6 partG" style="padding: 0px;"></div>
+</section>
+<!-- CONTENU UN UNIVERS HYPER RICHE : VERSION WEB -->
+<section class="row spid-cont-hyper-riche align-items-center">
+    <div class="col"></div>
+    <div class="col-5 descrip mb-0"> 
+        <h1 class="text-end">UN UNIVERS HYPER RICHE !</h1> <!-- LES TITRES -->
+        <h2 class="text-end px-4">A chacun son Spidey !</h2> <!-- LES TITRES -->
+        <p class="px-4">Le multivers est un concept que DC et Marvel utilisent tous les deux. Chaque entreprise utilise une Terre ou un univers principal, comme hôte de la majorité de leurs histoires, laissant d'autres histoires à explorer dans des univers parallèles, des bandes destinées à un coup ou d'autres concepts pour enrichir la tradition et garder les choses fraîches. &Agrave; DC, la Terre principale est Earth Prime. Marvel, en revanche, aime utiliser des nombres. La Terre d'origine dans Marvel est la Terre-616 après avoir été précédemment reconnu comme Earth-199999. Earth-199999 a essentiellement été remplacé officiellement par 616 le mois dernier.</p>
+        <p class="px-4">Peu importe ce qui se passe, le multivers est sur le point de s'ouvrir complètemennt et quelle meilleure façon d'en profiter que dans une histoire avec l'un des personnages les plus aimés de Marvel.</p>
+        <p class="px-4">Il existe forcément un Spiderman qui te plaira dans cet univers aux possibilité inifinies.</p>
     </div>
 </section>
-
-    <!-- FOOTER -->
+<!-- FOOTER -->
     <footer class="row footer-heros">
         <!-- BOUTONS DE NAVIGATION : version desktop-->
-        <div class="row footer-1desktop-heros justify-content-around px-2">
+        <div class="row footer-1desktop-heros justify-content-around">
             <div class="row col-4 part-1desktop-heros text-end m-0 p-0">
                 <a class="col-3 button btn px-0 text-end" href="#">Mobile app</a>
                 <a class="col-6 button btn px-0 text-end" href="#">Politique de confidentialité</a>
