adversaire version desktop

--- a/adversaires.html
+++ b/adversaires.html
@@ -43,68 +43,205 @@
             </div>
         
     </nav>
-
-
-
-
-
-    <!-- FOOTER -->
-    <footer class="row footer-adversaires">
-        <!-- BOUTONS DE NAVIGATION : version desktop-->
-        <div class="row footer-1desktop-adversaires justify-content-around px-2 pt-5">
-            <div class="row col-4 part-1desktop-adversaires text-end m-0 p-0">
-                <a class="col-3 button btn px-0 text-end" href="#">Mobile app</a>
-                <a class="col-6 button btn px-0 text-end" href="#">Politique de confidentialité</a>
-                <a class="col-3 button btn px-0 text-end" href="#">Cookies</a>
+<!-- BANNIERE : SUPER VILAINS -->
+    <section class="row spid-cont-adv align-items-center">
+        <div class="col container banner"> 
+            <h1>SUPER VILAINS</h1> <!-- LES TITRES -->
+            <h2>Ce n'est jamais blanc ou noir, méchant ou gentil !</h2> <!-- LES TITRES -->
+        </div>
+    </section>
+    <section class="row spid-card-adv align-items-center">
+        <div class="col container card-ligne1-adv p-5"> 
+            <div class="row position-card-ligne1">
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img8.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img9.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img10.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-2 part-logodesktop-adversaires justify-content-center align-items-center p-0" style="text-align: center;">
-                <img src="Assets/Logo/logo1.png" id="Logo-SAYNA" alt="Logo Sayna">
-                <img src="Assets/Logo/logo2.png" id="Logo-X" alt="Logo X">
-                <img src="Assets/Logo/logo3.png" id="Logo-Marvel" alt="Logo Marvel">
+            <div class="row position-card-ligne1">
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img11.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img12.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img13.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-4 part-2desktop-adversaires d-flex align-items-center p-0">
-                <a class="col-3 button btn p-0 text-start" href="#">Contact</a>
-                <a class="col-3 button btn p-0 text-start" href="#">Blog</a>
-                <input class="col-3 form-select form-select2 pt-0 pb-0" placeholder="Langue" style="width: 40%; border: none; margin-left: -8%; padding-left: 14px;">                
+            <div class="row position-card-ligne1">
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img14.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img15.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img16.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
             </div>
-            <div class="row container footer-2desktop-adversaires">
-                <img class="rounded-circle" src="Assets/Logo/logof.png" alt="Logo Facebook" style="margin-top: 5%;">
-                <img class="rounded-circle" src="Assets/Logo/logoi.png" alt="Logo Instagram"style="margin-top: 5%;">
-                <img class="rounded-circle" src="Assets/Logo/logoy.png" alt="Logo Youtube" style="margin-top: 5%;">
-                <img class="rounded-circle" src="Assets/Logo/logot.png" alt="Logo Twitter" style="margin-top: 5%;">
+            <div class="row position-card-ligne1 justify-content-center align-items center">
+                <div class="col-4 cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img17.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
+                <div class="col-4 cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img18.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Dennis Carredine</h3>
+                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
+                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
+                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- BOUTONS DE NAVIGATION : version mobile-->
-        <div class="row footer-1mobile-adversaires justify-content-center m-0 pt-5">
-            <div class="row m-0 col-6 part-1mobile-adversaires align-items-start">
-                <a class="button btn text-start pb-0" href="#">Mobile app</a>
-                <a class="button btn text-start pb-0" href="#">Politique de confidentialité</a>
-                <a class="button btn text-start pb-0" href="#">Cookies</a>
-                <a class="button btn text-start pb-0" href="#">Contact</a>
-                <a class="button btn text-start pb-0" href="#">Blog</a>
-            </div>
-            <div class="col-6 part-2mobile-adversaires d-flex justify-content-center align-items-center">
-                <input class="form-select2 px-3 mb-5" placeholder="Langue" style="width: 50%; border: none; padding: 0px">                
-            </div>
+    </section>
+<!-- FOOTER -->
+<footer class="row footer-adversaires">
+    <!-- BOUTONS DE NAVIGATION : version desktop-->
+    <div class="row footer-1desktop-adversaires justify-content-around px-2 pt-5">
+        <div class="row col-4 part-1desktop-adversaires text-end m-0 p-0">
+            <a class="col-3 button btn px-0 text-end" href="#">Mobile app</a>
+            <a class="col-6 button btn px-0 text-end" href="#">Politique de confidentialité</a>
+            <a class="col-3 button btn px-0 text-end" href="#">Cookies</a>
         </div>
-        <!-- LOGOS SAYNA X MARVEL-->
-        <div class="col-12 part-logomobile-adversaires justify-content-center align-items-center 
-        text-center p-0">
+        <div class="col-2 part-logodesktop-adversaires justify-content-center align-items-center p-0" style="text-align: center;">
             <img src="Assets/Logo/logo1.png" id="Logo-SAYNA" alt="Logo Sayna">
             <img src="Assets/Logo/logo2.png" id="Logo-X" alt="Logo X">
             <img src="Assets/Logo/logo3.png" id="Logo-Marvel" alt="Logo Marvel">
         </div>
-        <!-- ICONES DE RESEAUX SOCIAUX -->
-        <div class="col-12 footer-2mobile-adversaires justify-content-center align-items-center text-center my-4">
-            <img class="rounded-circle-adversaires" src="Assets/Logo/logof.png" alt="Logo Facebook">
-            <img class="rounded-circle-adversaires" src="Assets/Logo/logoi.png" alt="Logo Instagram">
-            <img class="rounded-circle-adversaires" src="Assets/Logo/logoy.png" alt="Logo Youtube">
-            <img class="rounded-circle-adversaires" src="Assets/Logo/logot.png" alt="Logo Twitter">
+        <div class="col-4 part-2desktop-adversaires d-flex align-items-center p-0">
+            <a class="col-3 button btn p-0 text-start" href="#">Contact</a>
+            <a class="col-3 button btn p-0 text-start" href="#">Blog</a>
+            <input class="col-3 form-select form-select2 pt-0 pb-0" placeholder="Langue" style="width: 40%; border: none; margin-left: -8%; padding-left: 14px;">                
         </div>
-        <!-- TEXTE BAS DU FOOTER -->
-        <div class="row container footer-3 p-0">
-            <p>&copy;SAYNAXMARVEL, Inc.2022. We love our users!</p>
+        <div class="row container footer-2desktop-adversaires">
+            <img class="rounded-circle" src="Assets/Logo/logof.png" alt="Logo Facebook" style="margin-top: 5%;">
+            <img class="rounded-circle" src="Assets/Logo/logoi.png" alt="Logo Instagram"style="margin-top: 5%;">
+            <img class="rounded-circle" src="Assets/Logo/logoy.png" alt="Logo Youtube" style="margin-top: 5%;">
+            <img class="rounded-circle" src="Assets/Logo/logot.png" alt="Logo Twitter" style="margin-top: 5%;">
         </div>
-    </footer> 
+    </div>
+    <!-- BOUTONS DE NAVIGATION : version mobile-->
+    <div class="row footer-1mobile-adversaires justify-content-center m-0 pt-5">
+        <div class="row m-0 col-6 part-1mobile-adversaires align-items-start">
+            <a class="button btn text-start pb-0" href="#">Mobile app</a>
+            <a class="button btn text-start pb-0" href="#">Politique de confidentialité</a>
+            <a class="button btn text-start pb-0" href="#">Cookies</a>
+            <a class="button btn text-start pb-0" href="#">Contact</a>
+            <a class="button btn text-start pb-0" href="#">Blog</a>
+        </div>
+        <div class="col-6 part-2mobile-adversaires d-flex justify-content-center align-items-center">
+            <input class="form-select2 px-3 mb-5" placeholder="Langue" style="width: 50%; border: none; padding: 0px">                
+        </div>
+    </div>
+    <!-- LOGOS SAYNA X MARVEL-->
+    <div class="col-12 part-logomobile-adversaires justify-content-center align-items-center 
+    text-center p-0">
+        <img src="Assets/Logo/logo1.png" id="Logo-SAYNA" alt="Logo Sayna">
+        <img src="Assets/Logo/logo2.png" id="Logo-X" alt="Logo X">
+        <img src="Assets/Logo/logo3.png" id="Logo-Marvel" alt="Logo Marvel">
+    </div>
+    <!-- ICONES DE RESEAUX SOCIAUX -->
+    <div class="col-12 footer-2mobile-adversaires justify-content-center align-items-center text-center my-4">
+        <img class="rounded-circle-adversaires" src="Assets/Logo/logof.png" alt="Logo Facebook">
+        <img class="rounded-circle-adversaires" src="Assets/Logo/logoi.png" alt="Logo Instagram">
+        <img class="rounded-circle-adversaires" src="Assets/Logo/logoy.png" alt="Logo Youtube">
+        <img class="rounded-circle-adversaires" src="Assets/Logo/logot.png" alt="Logo Twitter">
+    </div>
+    <!-- TEXTE BAS DU FOOTER -->
+    <div class="row container footer-3 p-0">
+        <p>&copy;SAYNAXMARVEL, Inc.2022. We love our users!</p>
+    </div>
+</footer> 
+
+
 </body>
 </html>
