--- a/adversaires.html
+++ b/adversaires.html
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="row position-card-ligne1 justify-content-center align-items center">
-                <div class="col-4 cartes-adv">
+                <div class="col-md-4 cartes-adv">
                     <div class="images-cartes-adv">
                         <img src="Assets/Illustration/img17.png" alt="Photo">
                     </div>
@@ -169,7 +169,7 @@
                         <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
                     </div>
                 </div>
-                <div class="col-4 cartes-adv">
+                <div class="col-md-4 cartes-adv">
                     <div class="images-cartes-adv">
                         <img src="Assets/Illustration/img18.png" alt="Photo">
                     </div>
