--- a/adversaires.html
+++ b/adversaires.html
@@ -69,10 +69,10 @@
                         <img src="Assets/Illustration/img9.png" alt="Photo">
                     </div>
                     <div class="textes-cartes-adv">
-                        <h3>Dennis Carredine</h3>
-                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
-                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
-                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                        <h3>Bouffon Vert</h3>
+                        <p><strong>Identité : </strong>Norman Osborn</p>
+                        <p><strong>Capacités : </strong>Fondateur de Oscorp Technologies, Serum Super Soldat, Planeur/Equipements de hautes technologies.</p>
+                        <p><strong>Objectif : </strong>Souffrant d'une dissociation de personnalité après l'injection du serum, il ne cherche pas le chaos et le mort de Spiderman. La personnalité de Norman reste présente, mais dominée par le bouffon.</p>
                     </div>
                 </div>
                 <div class="col cartes-adv">
@@ -80,10 +80,10 @@
                         <img src="Assets/Illustration/img10.png" alt="Photo">
                     </div>
                     <div class="textes-cartes-adv">
-                        <h3>Dennis Carredine</h3>
-                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
-                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
-                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                        <h3>Dr. Octopus</h3>
+                        <p><strong>Identité : </strong>Otto Octavius</p>
+                        <p><strong>Capacités : </strong>Chercheur à Oscorp Technologies, Tentacules mécaniques contrôlés par puce neuronale.</p>
+                        <p><strong>Objectif : </strong>Suite à un accident lors d'une expérience, sa femme meurt et son équipement prend le contrôle de son esprit le rendant plus violent. Pensant que Spiderman en est l'origine, il souhaite le voir mort.</p>
                     </div>
                 </div>
             </div>
@@ -93,10 +93,10 @@
                         <img src="Assets/Illustration/img11.png" alt="Photo">
                     </div>
                     <div class="textes-cartes-adv">
-                        <h3>Dennis Carredine</h3>
-                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
-                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
-                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                        <h3>Homme-sable</h3>
+                        <p><strong>Identité : </strong>Flint Marco</p>
+                        <p><strong>Capacités : </strong>Change son corps en sable, Contrôle individuellement les molécules de sable.</p>
+                        <p><strong>Objectif : </strong>Sauver sa fille atteint de maladia grave est son unique préoccupation, même après son accident l'ayant changé en homme-sable. Par manque d'argent, il devient criminel malgré lui et enchaîne les mauvaises décisions.</p>
                     </div>
                 </div>
                 <div class="col cartes-adv">
@@ -104,10 +104,10 @@
                         <img src="Assets/Illustration/img12.png" alt="Photo">
                     </div>
                     <div class="textes-cartes-adv">
-                        <h3>Dennis Carredine</h3>
-                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
-                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
-                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                        <h3>Bouffon Vert II</h3>
+                        <p><strong>Identité : </strong>Harry Osborn</p>
+                        <p><strong>Capacités : </strong>Dirigeant de Oscorp Technologies, Serum Super Soldat II, Planeur/Equipements de hautes technologies.</p>
+                        <p><strong>Objectif : </strong>Meilleur ami de Peter. Souffrant d'une dissociation de personnalité après l'injection du serum (comme son père), il ne cherche que la mort de Spiderman, tenu responsable de la mort de son père.</p>
                     </div>
                 </div>
                 <div class="col cartes-adv">
@@ -115,10 +115,10 @@
                         <img src="Assets/Illustration/img13.png" alt="Photo">
                     </div>
                     <div class="textes-cartes-adv">
-                        <h3>Dennis Carredine</h3>
-                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
-                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
-                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                        <h3>Venom</h3>
+                        <p><strong>Identité : </strong>Symbiote | Eddie Brock </p>
+                        <p><strong>Capacités : </strong>Force surhumaine, Matérialiser des armes/objets, Résistance importante.</p>
+                        <p><strong>Objectif : </strong>Extraterrestre se liant à un journaliste d'investigation, il est l'anti Héro par excellence. A la fois térrifiant et violent, mais animé par le sentiment de justice d'Eddie, mieux vaut ne pas en faire son ennemi.</p>
                     </div>
                 </div>
             </div>
@@ -128,10 +128,10 @@
                         <img src="Assets/Illustration/img14.png" alt="Photo">
                     </div>
                     <div class="textes-cartes-adv">
-                        <h3>Dennis Carredine</h3>
-                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
-                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
-                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                        <h3>Lézard</h3>
+                        <p><strong>Identité : </strong>Dr. Curtis Connors</p>
+                        <p><strong>Capacités : </strong>Chercheur Oscorp Technologies, Force surhumaine et Aptitudes reptiliennes.</p>
+                        <p><strong>Objectif : </strong>Animé par le désir de sauver les maux du corps humain, il développe un sérum à partir d'ADN de lézard. Ce premier essai devait faire repousser son brais amputé, mais il se transforme entièrement en lézard. Son souhait, étendre cette évolution.</p>
                     </div>
                 </div>
                 <div class="col cartes-adv">
@@ -139,10 +139,10 @@
                         <img src="Assets/Illustration/img15.png" alt="Photo">
                     </div>
                     <div class="textes-cartes-adv">
-                        <h3>Dennis Carredine</h3>
-                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
-                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
-                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                        <h3>Electro</h3>
+                        <p><strong>Identité : </strong>Maxwell Dillon</p>
+                        <p><strong>Capacités : </strong>Ingénieur Oscorps Technologies, Manipulation et stockage de l'électricité.</p>
+                        <p><strong>Objectif : </strong>Une expérience à Oscorp tourne mal et transforme son corps en condensateur capable de manipuler l'électricité. Fan obsessionnel de Spiderman, son pouvoir le change en adversaire remploi de colère et cherchant la défaite de son idole.</p>
                     </div>
                 </div>
                 <div class="col cartes-adv">
@@ -150,34 +150,60 @@
                         <img src="Assets/Illustration/img16.png" alt="Photo">
                     </div>
                     <div class="textes-cartes-adv">
-                        <h3>Dennis Carredine</h3>
-                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
-                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
-                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                        <h3>Rhino</h3>
+                        <p><strong>Identité : </strong>Aleksei Sytsevich</p>
+                        <p><strong>Capacités : </strong>Costume mécanique en form de Rhinocéros puissant.</p>
+                        <p><strong>Objectif : </strong>Mafieux russe qui a détourné un camion blindé d'Oscorp contenant des fioles de plutonim, mais désarmé et vaincu par Spiderman. Il est ensuite recruté par Harry Osborn, premier membre d'une nouvelle équipe créée pour combatre Spider-Man et faire des ravages.</p>
                     </div>
                 </div>
             </div>
-            <div class="row position-card-ligne1 justify-content-center align-items center">
-                <div class="col-md-4 cartes-adv">
+            <!-- VERSION DESKTOP 2 DERNIERES CARTES -->
+            <div class="row position-card-ligne1 version-desktop justify-content-center align-items center">
+                <div class="col-4 cartes-adv">
                     <div class="images-cartes-adv">
                         <img src="Assets/Illustration/img17.png" alt="Photo">
                     </div>
                     <div class="textes-cartes-adv">
-                        <h3>Dennis Carredine</h3>
-                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
-                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
-                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                        <h3>Vautour</h3>
+                        <p><strong>Identité : </strong>Adrian Toomes</p>
+                        <p><strong>Capacités : </strong>Costume mécanique de vautour, armes extraterrestre.</p>
+                        <p><strong>Objectif : </strong>Il se convertit en marchand d'armes extraterrestre suite à la faillite de son entreprise. Père de famille fortuné le jour, voleur d'armes extraterrestre la nuit, il mène une double vie. Spiderman se mettant en travers de son business, il souhaite la mort du justicier.</p>
                     </div>
                 </div>
-                <div class="col-md-4 cartes-adv">
+                <div class="col-4 cartes-adv">
                     <div class="images-cartes-adv">
                         <img src="Assets/Illustration/img18.png" alt="Photo">
                     </div>
                     <div class="textes-cartes-adv">
-                        <h3>Dennis Carredine</h3>
-                        <p><strong>Identité : </strong>Inspiré du Cambrioleur</p>
-                        <p><strong>Capacités : </strong>Humain sans caractéristique particulière.</p>
-                        <p><strong>Objectif : </strong>Mi-temps entre escroc et voleur de voiture à New-York, il est en partie responsable, avec Flint Marco, de la mort de Ben Parker lors d'un braquage à main armé qui a mal tourné. C'est le premier adversaire de Ben Parker qui l'amènera à devenir Spiderman.</p>
+                        <h3>Mysterio</h3>
+                        <p><strong>Identité : </strong>Quentin Beck</p>
+                        <p><strong>Capacités : </strong>Intelligent, Costume hautes technologies, Drones.</p>
+                        <p><strong>Objectif : </strong>Ancien employé de Stark Industries, il cherche à remplacer Iron Man et devenir un symbole de justice. Pour cela, il orchestre des attaques en utilisant des illusions et une technologie avancée. Spiderman découvrant son plan, il devient un à la hauteur du héro.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- VERSION MOBILE 2 DERNIERES CARTES -->
+            <div class="row position-card-ligne1 version-mobile justify-content-center align-items center">
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img17.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Vautour</h3>
+                        <p><strong>Identité : </strong>Adrian Toomes</p>
+                        <p><strong>Capacités : </strong>Costume mécanique de vautour, armes extraterrestre.</p>
+                        <p><strong>Objectif : </strong>Il se convertit en marchand d'armes extraterrestre suite à la faillite de son entreprise. Père de famille fortuné le jour, voleur d'armes extraterrestre la nuit, il mène une double vie. Spiderman se mettant en travers de son business, il souhaite la mort du justicier.</p>
+                    </div>
+                </div>
+                <div class="col cartes-adv">
+                    <div class="images-cartes-adv">
+                        <img src="Assets/Illustration/img18.png" alt="Photo">
+                    </div>
+                    <div class="textes-cartes-adv">
+                        <h3>Mysterio</h3>
+                        <p><strong>Identité : </strong>Quentin Beck</p>
+                        <p><strong>Capacités : </strong>Intelligent, Costume hautes technologies, Drones.</p>
+                        <p><strong>Objectif : </strong>Ancien employé de Stark Industries, il cherche à remplacer Iron Man et devenir un symbole de justice. Pour cela, il orchestre des attaques en utilisant des illusions et une technologie avancée. Spiderman découvrant son plan, il devient un à la hauteur du héro.</p>
                     </div>
                 </div>
             </div>
