--- a/bonus.html
+++ b/bonus.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!-- BARRE DE NAVIGATION -->
-    <nav class="row p-2 align-items-center">
+    <nav class="row nav-bonus p-2 align-items-center">
 <!-- Partie logo  -->
             <div class="col-sm-4 col-md-3 offset-md-1 d-flex p-md-2">
                 <div class="col-2 justify-content-center align-self-center text-end">
