change index.html en home.html dans les btn nav

--- a/adversaires.html
+++ b/adversaires.html
@@ -29,7 +29,7 @@
 <!-- Partie boutons de navigation -->
             <div class="navig-boutons col-7 px-md-5">
                 <div class="col-3 justify-content-center text-center">
-                    <a class="text-white text-decoration-none fw-bold" href="index.html">Accueil</a>
+                    <a class="text-white text-decoration-none fw-bold" href="home.html">Accueil</a>
                 </div>
                 <div class="col-3 justify-content-center text-center">
                     <a class="text-white text-decoration-none fw-bold" href="adversaires.html">Adversaires</a>
