--- a/a-propos.html
+++ b/a-propos.html
@@ -29,7 +29,7 @@
 <!-- Partie boutons de navigation -->
             <div class="navig-boutons col-7 px-md-5">
                 <div class="col-3 justify-content-center text-center">
-                    <a class="text-white text-decoration-none fw-bold" href="index.html">Accueil</a>
+                    <a class="text-white text-decoration-none fw-bold" href="home.html">Accueil</a>
                 </div>
                 <div class="col-3 justify-content-center text-center">
                     <a class="text-white text-decoration-none fw-bold" href="adversaires.html">Adversaires</a>
@@ -46,7 +46,7 @@
 <!-- PARTIE JAUNE : BANNIERE -->
 <!-- BANNIERE : SUPER VILAINS / VERSION DESKTOP -->
     
-<section class="row spid-cont-apropos-desktop align-items-center">
+<section class="row p-5 spid-cont-apropos-desktop align-items-center">
     <div class="col container banner my-5 mx-3"> 
         <h1>LA TOILE</h1> <!-- LES TITRES -->
         <h2>Driiing driiing petite antenne !</h2> <!-- LES TITRES -->
@@ -66,7 +66,7 @@
     
 <!-- PARTIE ROUGE : PETITE ANTENNE -->
 <section class="row spid-cont-apropos-rouge justify-content-between">
-    <div class="col-xs-11 col-sm-6 my-5 justify-content-center align-self-center text-center">
+    <div class="col-xs-11 col-sm-6 my-5 justify-content-center align-self-center text-center" style="padding-left: 0px;padding-right: 0px;">
         <h2>LA PETITE ANTENNE</h2>
         <p class="mb-0">Envie de laisser un mot à ton araignée préférée.</p>
         <p>Dépose ton message sur le web et on s'occupe de tout !</p>
